--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,14 +4,17 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
     <!-- Permission to read files from external storage (outside application container).
          As of Android 12 this permission no longer has any effect. Instead use the
          READ_MEDIA_IMAGES, READ_MEDIA_VIDEO or READM_MEDIA_AUDIO permissions. -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <!-- Permissions to read media files. -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+    <!--
+            android:enableOnBackInvokedCallback="true"
+    -->
 
     <application
         android:label="CRM Flutter"
