--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>Need location permission for area project listing</string>
+    <key>NSLocationUsageDescription</key>
+    <string>We need your location to provide personalized content based on your current location.</string>
 	<key>CFBundleDisplayName</key>
 	<string>Crm Flutter</string>
 	<key>CFBundleExecutable</key>
