--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     -->
 
     <application
-        android:label="Sync CRM"
+        android:label="Flutter Sync CRM"
         android:exported="true"
         android:launchMode="singleTop"
         android:icon="@mipmap/ic_launcher_secondary"
@@ -32,7 +32,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         >
         <activity
-            android:name=".crm_flutter.MainActivity"
+            android:name="com.savemax.crm.crm_flutter.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:icon="@mipmap/ic_launcher_secondary"
@@ -86,4 +86,6 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+
 </manifest>
