--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,12 +6,8 @@
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-    <string>Need location permission for area project listing</string>
-    <key>NSLocationUsageDescription</key>
-    <string>We need your location to provide personalized content based on your current location.</string>
 	<key>CFBundleDisplayName</key>
-	<string>Crm Flutter</string>
+	<string>Sync CRM</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -36,6 +32,8 @@
 	<string>We need access to your location to provide location-based services and improve user experience.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>We need access to your location to provide location-based services and improve user experience.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>We need your location to provide personalized content based on your current location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Need location permission for area project listing</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
@@ -44,6 +42,10 @@
 	<string>We need access to your photo library to select photos.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
