flutter shared live build to sales team

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     -->
 
     <application
-        android:label="Flutter Sync CRM"
+        android:label="Sync CRM"
         android:exported="true"
         android:launchMode="singleTop"
         android:icon="@mipmap/ic_launcher_secondary"
