--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.2.0+3
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -34,13 +34,13 @@ dependencies:
 
 #  webview_flutter: ^4.7.0
   flutter_inappwebview: ^6.0.0
-  flutter_downloader: ^1.11.8
-  screenshot: ^2.3.0
+#  flutter_downloader: ^1.11.8
+#  screenshot: ^2.3.0
 #  share_plus: ^9.0.0
 #  connectivity_plus: ^5.0.2
-  internet_connection_checker_plus: ^2.3.0
+  internet_connection_checker_plus: ^2.5.2
 
-  floating_draggable_widget: ^2.1.5
+#  floating_draggable_widget: ^2.1.5
   path_provider: ^2.1.3
   flutter_windowmanager: ^0.2.0
   shared_preferences: ^2.2.3
@@ -61,7 +61,7 @@ dependencies:
   device_info_plus: ^9.1.2
   image_picker: ^1.0.7
   image_cropper: ^5.0.1
-  call_log: ^4.0.0
+#  call_log: ^4.0.0
 
   #Firebase
   firebase_core: ^2.30.1
@@ -70,7 +70,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   #  firebase_analytics: ^10.10.4
 
-  fluttertoast: ^8.2.5
+#  fluttertoast: ^8.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
