--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
 
 #  floating_draggable_widget: ^2.1.5
   path_provider: ^2.1.3
-  flutter_windowmanager: ^0.2.0
+#  flutter_windowmanager: ^0.2.0
   shared_preferences: ^2.2.3
   flutter_bloc: ^8.1.4
   location: ^5.0.3
@@ -61,13 +61,14 @@ dependencies:
   device_info_plus: ^9.1.2
   image_picker: ^1.0.7
   image_cropper: ^5.0.1
-#  call_log: ^4.0.0
+  fluttertoast: ^8.2.8
+  #  call_log: ^4.0.0
 
   #Firebase
   firebase_core: ^2.30.1
   firebase_crashlytics: ^3.5.4
   firebase_messaging: ^14.9.1
-  flutter_local_notifications: ^17.1.2
+  flutter_local_notifications: ^18.0.1
   #  firebase_analytics: ^10.10.4
 
 #  fluttertoast: ^8.2.5
