--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ dependencies:
   intl: ^0.19.0
   share_plus: ^9.0.0
   device_info_plus: ^9.1.2
-  image_picker: ^1.0.7
-  image_cropper: ^5.0.1
+  image_picker: ^1.1.2
+#  image_cropper: ^5.0.1
   fluttertoast: ^8.2.8
   #  call_log: ^4.0.0
 
