--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,11 +26,11 @@
     -->
 
     <application
-        android:label="Sync CRM"
+        android:label="Rise CRM"
         android:exported="true"
         android:launchMode="singleTop"
-        android:icon="@mipmap/ic_launcher_secondary"
-        android:roundIcon="@mipmap/ic_launcher_secondary_round"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/LaunchTheme"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
@@ -40,8 +40,8 @@
             android:name="com.savemax.crm.crm_flutter.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:icon="@mipmap/ic_launcher_secondary"
-            android:roundIcon="@mipmap/ic_launcher_secondary_round"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -66,7 +66,7 @@
 
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_icon"
-                android:resource="@mipmap/ic_launcher_secondary_round" />
+                android:resource="@mipmap/ic_launcher_round" />
 
         </activity>
         <!-- Don't delete the meta-data below.
@@ -75,9 +75,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <activity
-            android:name="com.yalantis.ucrop.UCropActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
     </application>
     <!-- Required to query activities that can process text, see:
