--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,28 +21,17 @@ version: 1.2.0+3
 environment:
   sdk: '>=3.2.6 <4.0.0'
 
-
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-#  webview_flutter: ^4.7.0
   flutter_inappwebview: ^6.0.0
-#  flutter_downloader: ^1.11.8
-#  screenshot: ^2.3.0
-#  share_plus: ^9.0.0
-#  connectivity_plus: ^5.0.2
+  flutter_native_splash: ^2.4.3
   internet_connection_checker_plus: ^2.5.2
 
-#  floating_draggable_widget: ^2.1.5
+  flutter_launcher_icons: ^0.14.1
+
   path_provider: ^2.1.3
-#  flutter_windowmanager: ^0.2.0
   shared_preferences: ^2.2.3
   flutter_bloc: ^8.1.4
   location: ^5.0.3
@@ -53,65 +42,62 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   dio: ^5.4.3+1
-  flutter_native_splash: ^2.4.0
   package_info_plus: ^8.0.0
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   share_plus: ^9.0.0
   device_info_plus: ^9.1.2
   image_picker: ^1.1.2
-#  image_cropper: ^5.0.1
   fluttertoast: ^8.2.8
-  #  call_log: ^4.0.0
 
   #Firebase
   firebase_core: ^2.30.1
   firebase_crashlytics: ^3.5.4
   firebase_messaging: ^14.9.1
   flutter_local_notifications: ^18.0.1
-  #  firebase_analytics: ^10.10.4
 
-#  fluttertoast: ^8.2.5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.14.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.9
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png" # Path to your app icon
+  adaptive_icon_background: "#FFFFFF" # Optional: For adaptive icons
+#  adaptive_icon_foreground: "assets/icons/icon_foreground.png" # Optional: For adaptive icons
 
-# The following section is specific to Flutter packages.
+flutter_native_splash:
+  android: true
+  ios: true
+  color: "#FFFFFF" # Background color of the splash screen
+  image: assets/images/splash_image.png # Path to your splash screen image
+  android_gravity: center # Align image in the center
+  ios_content_mode: center # Align image in the center
+  fullscreen: true # Use fullscreen mode for splash screen
+
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   fonts:
     - family: Nunito
       fonts:
-          - asset: fonts/nunito_regular.ttf
-#          - asset: fonts/test_fonts.ttf
+        - asset: fonts/nunito_regular.ttf
 
   assets:
     - assets/icons/
     - assets/images/
     - assets/jsonFile/
     - assets/lottie/
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
