--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     -->
 
     <application
-        android:label="Sync CRM"
+        android:label="RISE CRM"
         android:exported="true"
         android:launchMode="singleTop"
         android:icon="@mipmap/ic_launcher"
@@ -39,13 +39,10 @@
             android:name="com.savemax.crm.crm_flutter.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-           >
+            android:windowSoftInputMode="adjustResize">
             <!-- android:windowSoftInputMode="adjustResize"-->
             <meta-data android:name="flutterEmbedding" android:value="2"/>
             <!-- Specifies an Android theme to apply to this Activity as soon as
