--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
 
   flutter_inappwebview: ^6.2.0-beta.2
-  flutter_native_splash: ^2.4.3
+#  flutter_native_splash: ^2.4.3
   connectivity_plus: ^6.1.0
   flutter_launcher_icons: ^0.14.1
   path_provider: ^2.1.3
