--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_inappwebview: ^6.2.0-beta.2
+  flutter_inappwebview: ^6.1.5
 #  flutter_native_splash: ^2.4.3
   connectivity_plus: ^6.1.0
   flutter_launcher_icons: ^0.14.1
